--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
         "@types/apollo-upload-client": "^17.0.1",
         "@types/babel-plugin-macros": "^2.8.5",
         "@types/classnames": "^2.3.1",
+        "@types/color-convert": "^2.0.0",
         "@types/enzyme": "^3.10.9",
         "@types/faker": "^6.6.9",
         "@types/fuzzaldrin": "^2.1.4",
