Page: Adding categories

--- a/package.json
+++ b/package.json
@@ -47,9 +47,13 @@
         "@saleor/macaw-ui": "^0.6.3",
         "@saleor/sdk": "^0.4.2",
         "@sentry/react": "^6.13.3",
+        "@uiw/react-color-hue": "^1.1.1",
+        "@uiw/react-color-material": "^1.1.1",
+        "@uiw/react-color-saturation": "^1.1.1",
         "apollo-upload-client": "^16.0.0",
         "babel-loader": "^8.2.2",
         "classnames": "^2.3.1",
+        "color-convert": "^2.0.1",
         "crc-32": "^1.2.0",
         "cross-env": "^7.0.3",
         "css-loader": "^6.4.0",
