--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
         "patch-package": "^6.4.7",
         "postcss": "^8.3.9",
         "prettier": "^2.4.1",
+        "react-dev-utils": "^12.0.1",
         "react-infinite-scroll-component": "^6.1.0",
         "react-intl-translations-manager": "^5.0.3",
         "react-test-renderer": "^17.0.2",
@@ -242,6 +243,7 @@
         "webpack-dev-server": "^3.11.3",
         "webpack-manifest-plugin": "^2.2.0",
         "workbox-cacheable-response": "^6.4.2",
+        "workbox-core": "^6.4.2",
         "workbox-expiration": "^6.4.2",
         "workbox-precaching": "^6.4.2",
         "workbox-routing": "^6.4.2",
@@ -300,8 +302,10 @@
         "graphql-codegen-generate": "graphql-codegen --config codegen.yml",
         "graphql-generate-types": "rimraf ./src/**/graphql && rimraf ./src/**/types && npm run graphql-build-types && npm run graphql-codegen-generate",
         "start": "webpack-dev-server -d",
-        "build": "webpack -p",
+        "build": "webpack --mode production --profile --json > stats.json",
+        "serve": "serve -s build -l 5000",
         "postbuild": "rimraf ./build/**/*.js.map",
+        "prebuild": "rimraf ./build && npm run graphql-generate-types && npm run make-both-messages",
         "lint": "npm run eslint && npm run format",
         "eslint": "eslint \"src/**/*.@(tsx|ts|jsx|js)\" -c ./.eslintrc --quiet --fix",
         "format": "prettier --write \"**/*.+(ts|tsx|js|jsx|json|yml|yaml|css|scss)\"",
