--- a/.eslintrc
+++ b/.eslintrc
@@ -207,7 +207,7 @@
         "no-new-wrappers": "error",
         "no-nested-ternary": "off",
         "no-param-reassign": "off",
-        "no-redeclare": "off",
+        "no-redeclare": "error",
         "no-return-await": "error",
         "no-return-assign": "off",
         "no-restricted-globals": "off",
@@ -222,7 +222,7 @@
         "no-sparse-arrays": "error",
         "no-template-curly-in-string": "error",
         "no-throw-literal": "error",
-        "no-trailing-spaces": "off",
+        "no-trailing-spaces": "error",
         "no-undef-init": "error",
         "no-underscore-dangle": "off",
         "no-unsafe-finally": "error",
@@ -309,6 +309,8 @@
         "babel.config.js",
         "apollo.config.js",
         "serviceWorker.js",
+        "serviceWorkerRegistration.js",
+        "serviceWorkerUpdateListener.js",
         ".storybook/*",
         ".github/*",
         "scripts/*",
