Page: Adding translations

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DEMO_MODE=true
+DEMO_MODE=false
 #API_URI=https://demo.saleor.io/graphql/
 API_URI=http://127.0.0.1:8000/graphql/
 APP_MOUNT_URI=/dashboard
