--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ APP_MOUNT_URI=/dashboard
 MZAWADIE_CHANNEL_SLUG=default-channel
 SW_INTERVAL=
 
+### 60 DAYS ACCESS TILL 25 APRIL
+GITHUB_TOKEN=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
+
 
 GTM_ID=
 
