--- a/.release-it.json
+++ b/.release-it.json
@@ -3,6 +3,7 @@
         "release": true,
         "draft": true,
 		"web": true,
+		"autoGenerate": true,
         "releaseName": "${version}"
     },
     "npm": {
