--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ MZAWADIE_CHANNEL_SLUG=default-channel
 SW_INTERVAL=
 
 ### 60 DAYS ACCESS TILL 25 APRIL
-GITHUB_TOKEN=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
+GITHUB_TOKEN="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"
 
 
 GTM_ID=
