--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
         "cross-env": "^7.0.3",
         "css-loader": "^6.4.0",
         "currency-codes": "^2.1.0",
-        "dotenv": "latest",
         "downshift": "^6.1.7",
         "editorjs-undo": "^0.1.4",
         "faker": "^6.6.6",
@@ -192,6 +191,7 @@
         "babel-plugin-react-intl": "^5.1.11",
         "babel-plugin-react-intl-auto": "^3.3.0",
         "codecov": "^3.8.3",
+        "dotenv-cli": "^7.0.0",
         "editorjs-alert": "^1.0.3",
         "editorjs-drag-drop": "^1.1.2",
         "editorjs-inline": "^4.1.3",
