--- a/.env
+++ b/.env
@@ -1,30 +1,10 @@
-DEMO_MODE=false
+#API_URI=https://demo.mzawadie.co.tz/graphql/
 #API_URI=https://demo.saleor.io/graphql/
 API_URI=http://127.0.0.1:8000/graphql/
-APP_MOUNT_URI=/dashboard
+APP_MOUNT_URI=/dashboard/
+
 MZAWADIE_CHANNEL_SLUG=default-channel
-SW_INTERVAL=
+DEMO_MODE=true
 
 ### 60 DAYS ACCESS TILL 25 APRIL
 GITHUB_TOKEN="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"
-
-
-GTM_ID=
-
-
-# URL where the static files are located
-# STATIC_URL=
-
-
-### Log Monitoring Configuration
-
-# Required
-SENTRY_DSN=
-
-# Optional
-# https://docs.sentry.io/product/cli/configuration/
-SENTRY_AUTH_TOKEN=
-SENTRY_ORG=
-SENTRY_PROJECT=
-SENTRY_URL_PREFIX=
-ENVIRONMENT=
