--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mzawadie-dashboard",
-    "version": "1.1.0-a.1",
+    "version": "1.1.0-a.2",
     "license": "BSD-3-Clause",
     "private": true,
     "description": "An open customizable e-commerce solution to help you create secure, fast and reliable online stores, marketplaces and B2B applications with Mzawadie Commerce",
@@ -8,7 +8,9 @@
         "mzawadie",
         "ecommerce",
         "react",
-        "headless"
+        "headless react",
+        "online shop",
+        "marketplace"
     ],
     "author": "Adullam Software",
     "contributors": [
